Batch update returned unexpected row count from update [0]; actual row count: 0; expected: 1

--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -13,3 +13,6 @@ log4j.appender.socket.Application=KlassenListe
 log4j.appender.socket.Port=4445
 log4j.appender.socket.threshold=DEBUG
 log4j.appender.socket.RemoteHost=localhost
+
+log4j.logger.org.hibernate.SQL=debug
+log4j.logger.org.hibernate.type=trace
